Refactor conversion screen components and improve UI responsiveness
- Updated DefaultSwingConversionScreenManager to use a dynamic window size based on screen scale.
- Replaced ConversionClosedEvent with ConversionScreenClosedEvent for better event handling.
- Introduced SwingConversionEventHandler interface for event handling in the conversion screen.
- Refactored SwingConversionScreenAssembler to accept a Dimension for window size.
- Enhanced ParameterPanel to include label text and improved layout.
- Added utility methods in SwingUtils for file chooser operations and screen scaling.
- Created new Swing components (SwingButton, SwingLabel, SwingSlider, SwingTextArea, SwingPanel, SwingVerticalScrollPane) with enhanced functionality.
- Updated conversionScreenMapping.properties for new button texts and sizes.
- Removed deprecated Swing components and ensured all UI elements are consistent with new design.